<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MajorsMatch</string>
    <string name="signup">Daftar</string>
    <string name="login">Login</string>
    <string name="photo">Photo</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="description">Description</string>
    <string name="message_welcome_page">Hy Student, kamu sedang bingung dengan jurusan di perkuliahan? tenang, karena adanya MajorsMatch App ini Kamu tidak akan bingung lagi kamu akan di pandu oleh guru atau chatbot kita</string>
    <string name="title_welcome_page">Welcome to MajorsMatch!</string>
    <string name="title_signup_page">Lengkapi data dulu dong lalu beralih ke login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Okay, Ayo Kita Memulai Langkah Baru!</string>
    <string name="title_login_page">Student</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Terimakasih sudah berkonsultasi di MajorsMAtch App Kami!</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="error_password_length">Password tidak boleh kurang dari 8 karakter</string>
    <string name="error_email_empty">Email tidak boleh kosong</string>
    <string name="error_email_format">Format email tidak sesuai</string>
    <string name="error_name">Masukkan Nama</string>
    <string name="logout">Keluar</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_stories">Add Story</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu</string>
    <string name="error_find_style">Can\'t find style. Error</string>
    <string name="error_parsing_style">Style parsing failed.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="home">Home</string>
    <string name="title_map">Google Maps</string>
    <string name="retry">Coba Lagi</string>
    <string name="hi_nama_siswa">Hi, (Nama Siswa)</string>
    <string name="sekolah">Sekolah</string>
    <string name="ornamen">ornamen</string>
    <string name="college">College</string>
    <string name="news">News</string>
    <string name="tutorial">Tutorial</string>
    <string name="consultation">Consultation</string>
    <string name="banner">Banner</string>
    <string name="dashboard">Home</string>
    <string name="Akun">Profile</string>
    <string name="majorsmatch1">MajorsMatch</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="Nisn">Name of student NISN Name of School\n\nPerlu diingat, bahwa hasil dari pencocokkan MajorsMatch adalah rekomendasi dari Al, maka dari hasil tersebut, perlu dikonsultasikan lebih lanjut dengan Guru/konsultan yang ada di App MajorsMatch.\n\nDengan klik \"Start\" anda setuju dengan ketentuan kami.</string>
    <string name="start">Start</string>
    <string name="majorsmatch3">MajorsMatch</string>
</resources>