<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.majorsmatch.MajorsMatch">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_nama_siswa"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="664dp"
        android:text="@string/sekolah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintOverlap" />

    <ImageView
        android:id="@+id/notif"
        android:layout_width="34dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_notifications_24"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="84dp"
        android:layout_weight="1"
        android:background="#000000"
        android:paddingTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ornamen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/notif"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/konsultasi"
        android:layout_width="137dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:text="@string/consultation"
        app:layout_constraintBottom_toBottomOf="@+id/berita"
        app:layout_constraintEnd_toStartOf="@+id/berita"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/berita"
        android:layout_width="125dp"
        android:layout_height="57dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="24dp"
        android:text="@string/news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/metode"
        android:layout_width="122dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="124dp"
        android:text="@string/tutorial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/konsultasi" />

    <Button
        android:id="@+id/Kampus"
        android:layout_width="121dp"
        android:layout_height="57dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="12dp"
        android:text="@string/college"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toEndOf="@+id/metode"
        app:layout_constraintTop_toBottomOf="@+id/berita" />

    <Button
        android:id="@+id/spanduk"
        android:layout_width="129dp"
        android:layout_height="61dp"
        android:layout_marginBottom="84dp"
        android:text="@string/banner"
        app:layout_constraintBottom_toTopOf="@+id/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_home_24"
        tools:ignore="ContentDescription,VisualLintBounds" />

    <ImageView
        android:id="@+id/majors2"
        android:layout_width="78dp"
        android:layout_height="52dp"
        android:layout_marginStart="164dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/majors"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spanduk"
        app:layout_constraintVertical_bias="0.877"
        app:srcCompat="@drawable/logomajorsmatch"
        tools:ignore="ContentDescription,NotSibling,VisualLintBounds,ImageContrastCheck" />

    <ImageView
        android:id="@+id/majors"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spanduk"
        app:layout_constraintVertical_bias="0.895"
        app:srcCompat="@drawable/baseline_person_24"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="#000000"
        android:paddingTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/majors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dashboard"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/majorsmatch1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/majors"
        tools:layout_editor_absoluteX="159dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/Akun"
        app:layout_constraintTop_toBottomOf="@+id/majors"
        tools:layout_editor_absoluteX="329dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>